# flame

./: .gitignore  AGENTS.md  CHANGELOG_FLMADM.md  Cargo.toml  Makefile  README.md  codecov.yml  compose.yaml
.github/workflows/: e2e-bench.yaml  e2e-bm.yaml  e2e-py.yaml  e2e-rust.yaml
ci/: flame-cluster-benchmark.yaml  flame-cluster-docker.yaml  flame-cluster-local-mtls.yaml  flame-cluster-local.yaml  flame-cluster.yaml  flame-local-mtls.yaml  flame-local.yaml  flame.yaml  generate-certs.sh  supervisord.conf
common/: Cargo.toml
common/src/: apis.rs  authz.rs  ctx.rs  lib.rs  net.rs  rbac.rs
common/src/apis/: from_rpc.rs  mod.rs  session.rs  to_rpc.rs  types.rs
docker/: Dockerfile.console  Dockerfile.fem  Dockerfile.foc  Dockerfile.fsm
docs/api/: frontend.md  index.md  types.md
docs/blogs/: evaluating-pi-by-flame-python.md  evaluating-pi-by-monte-carlo.md  run-pi-with-runner.md
docs/designs/: RFE280-runner.md
docs/designs/FRE280-runner/: RFE280-implementation-summary.md  RFE280-runner.md
docs/designs/RFE234-tls/: FS.md
docs/designs/RFE25-session-bind-failure-recovery/: FS.md
docs/designs/RFE284-flmrun/: RFE284-flmrun.md  runpy-enhancement-summary.md  runpy-enhancements.md
docs/designs/RFE309-agent-client/: FS.md
docs/sdk/: index.md  python.md  rust.md
docs/tutorials/: local-development.md  runner-setup.md  rust-api.md
e2e/: pyproject.toml
e2e/src/e2e/: __init__.py  api.py  basic_svc.py  error_svc.py  helpers.py  instance_svc.py
e2e/tests/: test_agent.py  test_application.py  test_batch.py  test_cache.py  test_cache_lru.py  test_core.py  test_failure_recovery.py  test_flmrun.py  test_get_data.py  test_open_session.py  test_runner.py  test_shim_selection.py  utils.py
examples/crawler/: README.md  crawler-app.yaml  crawler.py
examples/ps/: main.py
examples/rl/: README.md  main.py  model.py  pyproject.toml
examples/rl/basic/: README.md
examples/rl/replay_buffer/: README.md  collector.py  main.py  pyproject.toml  replay_buffer.py  test_replay_buffer.py
examples/rl/torchrl_dqn/: README.md  collector.py  main.py  model.py  pyproject.toml  replay_buffer.py
examples/vllm/: README.md
executor_manager/: Cargo.toml
executor_manager/src/: client.rs  executor.rs  main.rs  manager.rs  stream_handler.rs
executor_manager/src/appmgr/: downloader.rs  mod.rs  python.rs
executor_manager/src/shims/: grpc_shim.rs  host_shim.rs  mod.rs
executor_manager/src/states/: bound.rs  idle.rs  mod.rs  unbinding.rs
flmadm/: Cargo.toml  README.md
flmadm/src/: main.rs  types.rs
flmadm/src/commands/: install.rs  mod.rs  rbac.rs  uninstall.rs
flmadm/src/managers/: admin.rs  backup.rs  build.rs  cert.rs  config.rs  installation.rs  mod.rs  source.rs  systemd.rs  user.rs
flmctl/src/: create.rs  deploy.rs  list.rs  main.rs  utils.rs  view.rs
flmctl/tests/: deploy_cli.rs
flmexec/: Cargo.toml
flmexec/src/: client.rs  service.rs
flmexec/src/api/: mod.rs
flmexec/src/script/: mod.rs
flmexec/src/script/lang/: python.rs  shell.rs
flmping/: Cargo.toml
flmping/src/: apis.rs  client.rs  service.rs
hack/: local-test.sh
object_cache/: Cargo.toml  README.md
object_cache/src/: cache.rs  eviction.rs  main.rs
object_cache/src/storage/: disk.rs  mod.rs  none.rs
object_cache/tests/: integration_test.rs
perf/flamepy/: compose.yaml  main.py  pyproject.toml
perf/flamepy/conf/: flame-cluster.yaml  flame.yaml
perf/ray/: compose.yaml  main.py  pyproject.toml
rpc/: build.rs
rpc/protos/: admin.proto  backend.proto  frontend.proto  types.proto
sdk/python/: README.md  build_protos.py  pyproject.toml
sdk/python/example/: instance.py
sdk/python/protos/: cache.proto  shim.proto  types.proto
sdk/python/src/flamepy/: __init__.py  cache.py  cache_client.py  cache_pb2.py  cache_pb2_grpc.py  client.py  frontend_pb2_grpc.py  instance.py  service.py  types.py  types_pb2_grpc.py
sdk/python/src/flamepy/agent/: __init__.py  client.py
sdk/python/src/flamepy/cache/: __init__.py
sdk/python/src/flamepy/core/: __init__.py  cache.py  client.py  instance.py  runner.py  runpy.py  types.py
sdk/python/src/flamepy/proto/: frontend_pb2.py  frontend_pb2_grpc.py  shim_pb2.py  shim_pb2_grpc.py  types_pb2.py  types_pb2_grpc.py
sdk/python/src/flamepy/rl/: __init__.py
sdk/python/src/flamepy/runner/: runner.py  runpy.py  storage.py
sdk/python/src/flamepy/service/: __init__.py  client.py  instance.py
sdk/python/tests/: conftest.py  test_agent.py  test_cache.py  test_client.py  test_core.py  test_runner.py  test_service.py  test_types.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/macros/: Cargo.toml
sdk/rust/macros/src/: lib.rs
sdk/rust/protos/: types.proto
sdk/rust/src/: lib.rs  message.rs  object.rs
sdk/rust/src/apis/: ctx.rs  mod.rs
sdk/rust/src/client/: mod.rs
sdk/rust/src/service/: mod.rs
sdk/rust/tests/: benchmark_test.rs  integration_test.rs  rfe455_macro_test.rs
session_manager/: Cargo.toml
session_manager/migrations/sqlite/: 20240104152103_init.sql  20260321000000_add_nodes_executors.sql  20260331000000_add_rbac.sql  20260428000000_add_priority.sql  20260506000000_add_gpu.sql
session_manager/src/: main.rs  notify.rs
session_manager/src/apiserver/: admin.rs  auth.rs  backend.rs  frontend.rs  mod.rs
session_manager/src/cert/: manager.rs  mod.rs
session_manager/src/controller/: mod.rs
session_manager/src/controller/executors/: binding.rs  bound.rs  idle.rs  mod.rs  releasing.rs  unbinding.rs  void.rs
session_manager/src/controller/nodes/: mod.rs
session_manager/src/events/: fs.rs  memory.rs  mod.rs
session_manager/src/model/: mod.rs
session_manager/src/scheduler/: ctx.rs  mod.rs  statement.rs
session_manager/src/scheduler/actions/: allocate.rs  dispatch.rs  shuffle.rs
session_manager/src/scheduler/plugins/: drf.rs  fairshare.rs  gang.rs  mod.rs  priority.rs  shim.rs
session_manager/src/storage/: load_data_tests.rs  mod.rs  node_executor_tests.rs  node_tests.rs  session_limit_tests.rs  session_tests.rs
session_manager/src/storage/engine/: filesystem.rs  mod.rs  none.rs  sqlite.rs  types.rs
(+43 files in other folders)
