[workspace]
resolver = "2"
members = [
    "common",
    "flmctl",
    "flmadm",
    "flmping",
    "flmexec",
    "session_manager",
    "executor_manager",
    "rpc",
    "sdk/rust",
    "sdk/rust/macros",
    "examples/pi/rust",
    "cri",
    "stdng",
    "object_cache",
]
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "1"
tower = "0.5"
hyper-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
actix-rt = "2"
nix = { version = "0.30", features = ["signal"] }
uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"

strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rand = { version = "0.9" }

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "postgres", "macros" ] }

url = { version = "2", features = ["serde"] }

bincode = { version = "2" }
bson = "2"

# Shared dependencies moved from sub-projects
thiserror = "2"
time = { version = "0.3", features = ["macros"] }
serde_yaml = "0.9"
tokio-stream = "0.1"
tempfile = "3"
comfy-table = "7"
jsonschema = "0.33"
gethostname = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
syn = { version = "2", features = ["full"] }

# Arrow ecosystem (v58 for tonic 0.14 compatibility)
arrow = "58"
arrow-flight = "58"
arrow-ipc = { version = "58", features = ["zstd"] }

# profiling and HTTP
axum = "0.8"
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }

# parallelism
rayon = "1.10"
