[package]
name = "common"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc"}

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

time = { version = "0.3", features = ["macros"] }
bytes = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
serde_yaml = "0.9"
rustix = { version = "1.0" , features = ["system"] }
num_cpus = "1.0"