[package]
name = "common"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc"}
stdng = { path = "../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
gethostname = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }

time = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
rustix = { version = "1.1" , features = ["system"] }
num_cpus = "1.17"
bytesize = "1.3"
nvml-wrapper = "0.10"

axum = { workspace = true }
pprof = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
