[project]
name = "e2e"
version = "0.1.0"
description = "The e2e test of Flame"
readme = "README.md"
authors = [
    { name = "XFLOPS Authors", email = "support@xflops.io" }
]
requires-python = ">=3.9"
dependencies = [
    "cloudpickle>=3.1",
    "grpcio>=1.80",
    "grpcio-tools>=1.80",
]

[project.scripts]
e2e = "e2e:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["e2e*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "flamepy",
    "pytest>=8.4.2",
    "pytest-timeout>=2.3.1",
    "black>=25.1.0",
    "isort>=5.0.0",
]

[tool.pytest.ini_options]
timeout = 300
timeout_method = "thread"
timeout_func_only = true
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
]

[tool.ruff]
line-length = 320
target-version = "py38"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["e2e"]
