[package]
name = "flame-executor-manager"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
stdng = { path = "../stdng" }
flame-cache = { path = "../object_cache" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
url = { workspace = true }
actix-rt = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

bytes = { workspace = true }
flate2 = "1"
tar = "0.4"
zip = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
wasmtime = { version = "43", optional = true }
wasmtime-wasi = { version = "43", optional = true }
anyhow = "1"
tokio-stream = { workspace = true }
shellexpand = "3.1"

# Dependencies for embedded object cache
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
network-interface = "2"
regex = "1"
base64 = "0.22"
bson = "2"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

[dev-dependencies]
tempfile = "3"
