[package]
name = "flmadm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flmadm"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies for flmadm
anyhow = "1.0"
indicatif = "0.17"
console = "0.15"
which = "6.0"
walkdir = "2.4"
fs_extra = "1.3"
users = "0.11"
dialoguer = "0.11"

# Internal dependencies
common = { path = "../common" }
