[package]
name = "flmadm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flmadm"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for non-Unix stub
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Workspace dependencies (Unix-only)
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Additional dependencies for flmadm (Unix-only)
anyhow = "1.0"
indicatif = { version = "0.18", features = ["rayon"] }
console = "0.15"
which = "6.0"
walkdir = "2.4"
fs_extra = "1.3"
users = "0.11"
dialoguer = "0.11"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

# Internal dependencies (Unix-only)
common = { path = "../common" }
rpc = { path = "../rpc" }
