[package]
name = "flmexec"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-rs = { path = "../sdk/rust", features = ["macros"] }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
indicatif = {version = "*", features = ["rayon"]}
rand = { workspace = true }

[[bin]]
name = "flmexec"
path = "src/client.rs"

[[bin]]
name = "flmexec-service"
path = "src/service.rs"
