[package]
name = "flmping"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-rs = { path = "../sdk/rust" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
byte-unit = "5.0"

gethostname = "*"

[[bin]]
name = "flmping-service"
path = "src/service.rs"

[[bin]]
name = "flmping"
path = "src/client.rs"
