[package]
name = "flmping"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-rs = { path = "../sdk/rust", features = ["macros"] }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

futures = { workspace = true }
clap = { workspace = true }
indicatif = {version = "*", features = ["rayon"]}
byte-unit = "5.2"
comfy-table = { workspace = true }

gethostname = "*"

[[bin]]
name = "flmping-service"
path = "src/service.rs"

[[bin]]
name = "flmping"
path = "src/client.rs"
