[package]
name = "flame-object-cache"
version = "0.5.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
network-interface = "2"
regex = "1"
bytesize = "1.3"

arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
base64 = "0.22"
bson = "2"

rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
