[package]
name = "flame-session-manager"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
jsonschema = { workspace = true }

uuid = { workspace = true }

# Filesystem storage engine dependencies
crc32fast = "1.3"

# Certificate management dependencies
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.16"
base64 = "0.22"

# Tower middleware
tower = { version = "0.5" }
http = "1.0"

[dev-dependencies]
tokio-test = "*"
rand = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
