[package]
name = "flame-rs"
version = "0.5.0"
edition = "2021"
build = "build.rs"

description = "The Rust SDK of Flame"
repository = "https://github.com/xflops/flame"
license-file = "../../LICENSE"
readme = "README.md"

[dependencies]
stdng = { path = "../../stdng" }
common = { path = "../../common" }
flame-rs-macros = { path = "macros", optional = true }

tower = { workspace = true }
prost = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

time = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
bson = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
default = []
macros = ["dep:flame-rs-macros"]
